update shops note book

--- a/jupyterNotebooks/categoriesScraping.ipynb
+++ b/jupyterNotebooks/categoriesScraping.ipynb
@@ -30,9 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url = 'https://www.etsy.com/fr/c/accessories.hats_and_caps.formal_hats'\n",
     "params = {'locationQuery': 3017382}\n",
@@ -62,9 +73,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SophiePacomechapeaux',\n",
+       " 'WAWboutique',\n",
+       " 'jannio',\n",
+       " 'tetilene',\n",
+       " 'sweetlilishop',\n",
+       " 'ZUThats',\n",
+       " 'pollysonlyworld',\n",
+       " 'FrenchVintageShop',\n",
+       " 'Vaporalis',\n",
+       " 'Thegreenfan',\n",
+       " 'fancyfrenchthings',\n",
+       " 'SteamCustoms',\n",
+       " 'LescreationsdeNoline',\n",
+       " 'frenchlinenandlace',\n",
+       " 'VuDuLarge',\n",
+       " 'Dadacuriosity',\n",
+       " 'SecretChateau',\n",
+       " 'MyFrenchHome',\n",
+       " 'FleursEnFrance',\n",
+       " 'WesternSwingHulagirl',\n",
+       " 'VintageStorie',\n",
+       " 'Nostalgromancie',\n",
+       " 'Annbcreation',\n",
+       " 'Mamieavaitlesmemes',\n",
+       " 'anneliencatharina',\n",
+       " 'HandmadeByCe',\n",
+       " 'LeschapeauxdeMarine',\n",
+       " 'LarmoireRose',\n",
+       " 'FlorenceLace',\n",
+       " 'FrenchVintageMarche',\n",
+       " 'ladouchka',\n",
+       " 'delisaboutique',\n",
+       " 'LoveGDesign',\n",
+       " 'BlackRedSquare',\n",
+       " 'AubonheurduJourJ',\n",
+       " 'YULONA',\n",
+       " 'VideGrenierWithLove',\n",
+       " 'MatheHBcouture',\n",
+       " 'AtelierAnneB',\n",
+       " 'EpoqueVintage',\n",
+       " 'TracyChaplinMilliner',\n",
+       " 'EnglishShop',\n",
+       " 'KazamarieDesigns',\n",
+       " 'OhMyFrenchVintage',\n",
+       " 'louloufrenchvintage',\n",
+       " 'FRENCHWAVE',\n",
+       " 'JacquelineMcEwan',\n",
+       " 'MaisonCecile']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ele = content.xpath('//p[@class = \"text-gray-lighter text-body-smaller display-inline-block mr-xs-1\"]/text()')\n",
     "ele"
