update Jupyter NoteBooks

--- a/jupyterNotebooks/createShopsUsersControl.xlsx.ipynb
+++ b/jupyterNotebooks/createShopsUsersControl.xlsx.ipynb
@@ -68,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_row(file):\n",
@@ -76,15 +78,6 @@
     "        d = json.load(f)\n",
     "        shop_name = d['shop_name']\n",
     "        user_id = str(d['user_id'])\n",
-    "        # listing_active_count = d['listing_active_count']\n",
-    "        # accepts_custom_requests = d['accepts_custom_requests']\n",
-    "        # num_favorers = d['num_favorers']\n",
-    "        # creation_tsz = str(d['creation_tsz'])\n",
-    "        # currency_code = d['currency_code']\n",
-    "        # languages = d['languages']\n",
-    "        # title = d['title']\n",
-    "        # announcement = d['announcement']\n",
-    "    \n",
     "    return [shop_name, user_id]"
    ]
   },
@@ -457,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# df_clean.to_excel('../_outputs/shops_users_control.xlsx', index=True, header=True)"
@@ -583,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
