--- a/jupyterNotebooks/exploreShops.ipynb
+++ b/jupyterNotebooks/exploreShops.ipynb
@@ -138,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "file_list = glob.glob(\"../_outputs/shops/*.json\")\n",
@@ -191,274 +193,135 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>BijouxElte</td>\n",
-       "      <td>18842258</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
+       "      <td>BenjaminStall</td>\n",
+       "      <td>70666424</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
        "      <td>False</td>\n",
-       "      <td>195</td>\n",
-       "      <td>2012-01-02</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-08-06</td>\n",
        "      <td>EUR</td>\n",
-       "      <td>[fr, en-US, it]</td>\n",
-       "      <td>Bijoux Elté: one and only one.</td>\n",
-       "      <td>Creazioni dedicate alla donna che ama indossar...</td>\n",
-       "      <td>Thank you for your interest and order. Please ...</td>\n",
+       "      <td>[fr]</td>\n",
+       "      <td>Benjamin's digital engravings and vintage imag...</td>\n",
+       "      <td>Vintage engraving printing, woodtype, French a...</td>\n",
+       "      <td>J'espère que votre achat vous apportera entièr...</td>\n",
        "      <td></td>\n",
-       "      <td>{'link-1': {'title': 'shop-website', 'url': 'h...</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0chapo</td>\n",
-       "      <td>44974775</td>\n",
-       "      <td>26</td>\n",
+       "      <td>MikeloEcodesign</td>\n",
+       "      <td>60245258</td>\n",
+       "      <td>19</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2014-02-27</td>\n",
+       "      <td>171</td>\n",
+       "      <td>2015-01-16</td>\n",
        "      <td>EUR</td>\n",
-       "      <td>[fr]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>[fr, en-US]</td>\n",
+       "      <td>Hand-made</td>\n",
+       "      <td>WELCOME :)</td>\n",
+       "      <td>See you very soon, Cordially Mikélo</td>\n",
+       "      <td></td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1000ola</td>\n",
-       "      <td>88485431</td>\n",
-       "      <td>159</td>\n",
+       "      <td>LiliumLilith</td>\n",
+       "      <td>71740481</td>\n",
+       "      <td>271</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>76</td>\n",
-       "      <td>2016-03-23</td>\n",
+       "      <td>False</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2015-08-27</td>\n",
        "      <td>EUR</td>\n",
-       "      <td>[fr, de]</td>\n",
-       "      <td>Bracelets et Colliers à la mode Créations excl...</td>\n",
-       "      <td>1000ola sur YouTube: https://www.youtube.com/c...</td>\n",
-       "      <td></td>\n",
+       "      <td>[fr]</td>\n",
+       "      <td>Lilium Lilith</td>\n",
+       "      <td>Bonjour. Bienvenu ! Roselin-Art et Lilium Lili...</td>\n",
+       "      <td>N'hésitez pas à poser vos questions. A bientôt !</td>\n",
        "      <td></td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1000perlescreation</td>\n",
-       "      <td>116718282</td>\n",
-       "      <td>104</td>\n",
+       "      <td>KlrKrea</td>\n",
+       "      <td>113308974</td>\n",
+       "      <td>85</td>\n",
        "      <td>0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>0</td>\n",
-       "      <td>2017-08-17</td>\n",
+       "      <td>2017-08-29</td>\n",
        "      <td>EUR</td>\n",
        "      <td>[fr]</td>\n",
-       "      <td></td>\n",
-       "      <td>Bienvenue dans ma boutique, je suis créatrice ...</td>\n",
-       "      <td>Merci d'avoir choisi l'une de mes créations :-)</td>\n",
-       "      <td></td>\n",
+       "      <td>Papeterie événementielle et quotidienne</td>\n",
+       "      <td>Bienvenue sur ma boutique! Certains tarifs son...</td>\n",
        "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[{'title': 'facebook', 'url': 'https://www.fac...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1001BijouxOrigami</td>\n",
-       "      <td>51366124</td>\n",
-       "      <td>44</td>\n",
+       "      <td>KalinkaMalinkaRu</td>\n",
+       "      <td>89596984</td>\n",
+       "      <td>114</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2017-06-12</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>[fr, es, de, en-US, it, pt, ja, nl]</td>\n",
-       "      <td>Bijoux origami et accessoires de coiffure</td>\n",
-       "      <td>Bienvenue dans ma boutique Mille et un bijoux ...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>[{'title': 'facebook', 'url': 'http://www.face...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1001coquesliberty</td>\n",
-       "      <td>119186737</td>\n",
-       "      <td>1290</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>39</td>\n",
-       "      <td>2017-07-21</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>[fr]</td>\n",
-       "      <td>1001 coques iPhone et Samsung en Liberty</td>\n",
-       "      <td>Bonne visite</td>\n",
-       "      <td>Merci de votre commande, vous avez bien précis...</td>\n",
-       "      <td></td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1001Logos</td>\n",
-       "      <td>92689432</td>\n",
-       "      <td>39</td>\n",
-       "      <td>23</td>\n",
-       "      <td>True</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2016-08-30</td>\n",
+       "      <td>False</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2017-07-19</td>\n",
        "      <td>EUR</td>\n",
        "      <td>[fr, en-US]</td>\n",
-       "      <td>Logos, illustration and digital creation</td>\n",
-       "      <td>PROMOTION FESTIVAL OF THE END OF YEAR! From 23...</td>\n",
-       "      <td>Thank you for your order. I come to you very s...</td>\n",
-       "      <td>Thank you for your order. Do not hesitate to c...</td>\n",
-       "      <td>[{'title': 'shop-website', 'url': 'http://www....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1001perlesCreations</td>\n",
-       "      <td>113269402</td>\n",
-       "      <td>663</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27</td>\n",
-       "      <td>2017-07-21</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>[fr, de, en-US, es, it, nl]</td>\n",
-       "      <td>Que l'aventure créative continue........</td>\n",
-       "      <td>Livraison nationale gratuite dès 30 € d'achat,...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1001tissusdePatoune</td>\n",
-       "      <td>113072488</td>\n",
-       "      <td>61</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27</td>\n",
-       "      <td>2017-07-14</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>[fr]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>100Drinette</td>\n",
-       "      <td>48245022</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2014-11-20</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>[fr]</td>\n",
-       "      <td>Guirlandes</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Objet de l'artisanat Russe (Matriochka, boite ...</td>\n",
+       "      <td>Bonjour et bienvenue dans ma petite boutique d...</td>\n",
+       "      <td>Nous vous remercions pour votre achat votre co...</td>\n",
+       "      <td></td>\n",
+       "      <td>[{'title': 'facebook', 'url': 'https://www.fac...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             shop_name    user_id listing_active_count digital_listing_count  \\\n",
-       "0           BijouxElte   18842258                   12                     0   \n",
-       "1               0chapo   44974775                   26                     0   \n",
-       "2              1000ola   88485431                  159                     0   \n",
-       "3   1000perlescreation  116718282                  104                     0   \n",
-       "4    1001BijouxOrigami   51366124                   44                     0   \n",
-       "5    1001coquesliberty  119186737                 1290                     0   \n",
-       "6            1001Logos   92689432                   39                    23   \n",
-       "7  1001perlesCreations  113269402                  663                     0   \n",
-       "8  1001tissusdePatoune  113072488                   61                     0   \n",
-       "9          100Drinette   48245022                   23                     0   \n",
+       "          shop_name    user_id listing_active_count digital_listing_count  \\\n",
+       "0     BenjaminStall   70666424                   13                    13   \n",
+       "1   MikeloEcodesign   60245258                   19                     0   \n",
+       "2      LiliumLilith   71740481                  271                     0   \n",
+       "3           KlrKrea  113308974                   85                     0   \n",
+       "4  KalinkaMalinkaRu   89596984                  114                     0   \n",
        "\n",
        "  accepts_custom_requests num_favorers creation_date currency_code  \\\n",
-       "0                   False          195    2012-01-02           EUR   \n",
-       "1                   False            4    2014-02-27           EUR   \n",
-       "2                    True           76    2016-03-23           EUR   \n",
-       "3                   False            0    2017-08-17           EUR   \n",
-       "4                    True           10    2017-06-12           EUR   \n",
-       "5                    True           39    2017-07-21           EUR   \n",
-       "6                    True           30    2016-08-30           EUR   \n",
-       "7                   False           27    2017-07-21           EUR   \n",
-       "8                   False           27    2017-07-14           EUR   \n",
-       "9                   False            3    2014-11-20           EUR   \n",
+       "0                   False            2    2015-08-06           EUR   \n",
+       "1                   False          171    2015-01-16           EUR   \n",
+       "2                   False           16    2015-08-27           EUR   \n",
+       "3                    True            0    2017-08-29           EUR   \n",
+       "4                   False           12    2017-07-19           EUR   \n",
        "\n",
-       "                             languages  \\\n",
-       "0                      [fr, en-US, it]   \n",
-       "1                                 [fr]   \n",
-       "2                             [fr, de]   \n",
-       "3                                 [fr]   \n",
-       "4  [fr, es, de, en-US, it, pt, ja, nl]   \n",
-       "5                                 [fr]   \n",
-       "6                          [fr, en-US]   \n",
-       "7          [fr, de, en-US, es, it, nl]   \n",
-       "8                                 [fr]   \n",
-       "9                                 [fr]   \n",
-       "\n",
-       "                                               title  \\\n",
-       "0                     Bijoux Elté: one and only one.   \n",
-       "1                                               None   \n",
-       "2  Bracelets et Colliers à la mode Créations excl...   \n",
-       "3                                                      \n",
-       "4          Bijoux origami et accessoires de coiffure   \n",
-       "5           1001 coques iPhone et Samsung en Liberty   \n",
-       "6           Logos, illustration and digital creation   \n",
-       "7           Que l'aventure créative continue........   \n",
-       "8                                               None   \n",
-       "9                                         Guirlandes   \n",
+       "     languages                                              title  \\\n",
+       "0         [fr]  Benjamin's digital engravings and vintage imag...   \n",
+       "1  [fr, en-US]                                          Hand-made   \n",
+       "2         [fr]                                      Lilium Lilith   \n",
+       "3         [fr]            Papeterie événementielle et quotidienne   \n",
+       "4  [fr, en-US]  Objet de l'artisanat Russe (Matriochka, boite ...   \n",
        "\n",
        "                                        announcement  \\\n",
-       "0  Creazioni dedicate alla donna che ama indossar...   \n",
-       "1                                               None   \n",
-       "2  1000ola sur YouTube: https://www.youtube.com/c...   \n",
-       "3  Bienvenue dans ma boutique, je suis créatrice ...   \n",
-       "4  Bienvenue dans ma boutique Mille et un bijoux ...   \n",
-       "5                                       Bonne visite   \n",
-       "6  PROMOTION FESTIVAL OF THE END OF YEAR! From 23...   \n",
-       "7  Livraison nationale gratuite dès 30 € d'achat,...   \n",
-       "8                                               None   \n",
-       "9                                               None   \n",
+       "0  Vintage engraving printing, woodtype, French a...   \n",
+       "1                                         WELCOME :)   \n",
+       "2  Bonjour. Bienvenu ! Roselin-Art et Lilium Lili...   \n",
+       "3  Bienvenue sur ma boutique! Certains tarifs son...   \n",
+       "4  Bonjour et bienvenue dans ma petite boutique d...   \n",
        "\n",
-       "                                        sale_message  \\\n",
-       "0  Thank you for your interest and order. Please ...   \n",
-       "1                                               None   \n",
-       "2                                                      \n",
-       "3    Merci d'avoir choisi l'une de mes créations :-)   \n",
-       "4                                                      \n",
-       "5  Merci de votre commande, vous avez bien précis...   \n",
-       "6  Thank you for your order. I come to you very s...   \n",
-       "7                                               None   \n",
-       "8                                               None   \n",
-       "9                                               None   \n",
-       "\n",
-       "                                digital_sale_message  \\\n",
-       "0                                                      \n",
-       "1                                               None   \n",
-       "2                                                      \n",
-       "3                                                      \n",
-       "4                                                      \n",
-       "5                                                      \n",
-       "6  Thank you for your order. Do not hesitate to c...   \n",
-       "7                                               None   \n",
-       "8                                               None   \n",
-       "9                                               None   \n",
+       "                                        sale_message digital_sale_message  \\\n",
+       "0  J'espère que votre achat vous apportera entièr...                        \n",
+       "1                See you very soon, Cordially Mikélo                        \n",
+       "2   N'hésitez pas à poser vos questions. A bientôt !                        \n",
+       "3                                               None                 None   \n",
+       "4  Nous vous remercions pour votre achat votre co...                        \n",
        "\n",
        "                                               about  \n",
-       "0  {'link-1': {'title': 'shop-website', 'url': 'h...  \n",
-       "1                                               None  \n",
+       "0                                               None  \n",
+       "1                                                 []  \n",
        "2                                               None  \n",
-       "3                                               None  \n",
-       "4  [{'title': 'facebook', 'url': 'http://www.face...  \n",
-       "5                                               None  \n",
-       "6  [{'title': 'shop-website', 'url': 'http://www....  \n",
-       "7                                               None  \n",
-       "8                                               None  \n",
-       "9                                               None  "
+       "3  [{'title': 'facebook', 'url': 'https://www.fac...  \n",
+       "4  [{'title': 'facebook', 'url': 'https://www.fac...  "
       ]
      },
      "execution_count": 6,
@@ -467,12 +330,12 @@
     }
    ],
    "source": [
-    "df.head(10)"
+    "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -487,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -498,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +499,7 @@
        "max    1.233654e+08           7883.000000            1016.000000   64509.00000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,12 +510,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# df.listing_active_count.sort_values(['sort_values'], ascending=False).plot()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -680,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
