--- a/jupyterNotebooks/getSellerTaxinomy.ipynb
+++ b/jupyterNotebooks/getSellerTaxinomy.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from classes.EtsyApi import EtsyApi\n",
@@ -21,6 +23,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -116,26 +119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df = makeDataFrame(categories)\n",
-    "df.head(5)"
+    "#df = pd.DataFrame(categories)\n",
+    "#df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Sauvegarde au format Excel\n",
-    "df.to_excel('../_outputs/seller_taxonomy_{}.xlsx'.format(etsy.get_date_now()), index=False, header=True)"
+    "#df.to_excel('../_outputs/seller_taxonomy_{}.xlsx'.format(etsy.get_date_now()), index=False, header=True)"
    ]
   },
   {
@@ -164,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
